--- a/clientvue/package.json
+++ b/clientvue/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "fb": "^2.0.0",
+    "sweetalert": "^2.0.8",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
